Added data for GDP (PPP) and GDP per capita (PPP)

--- a/styles.css
+++ b/styles.css
@@ -2,12 +2,15 @@ table {
     width: 100%;
     border-collapse: collapse;
 }
-th, td {
+th {
     border: 1px solid #ddd;
     padding: 8px;
     text-align: left;
     cursor: pointer;
-}
-th {
     background-color: #f2f2f2;
+}
+td {
+    border: 1px solid #ddd;
+    padding: 8px;
+    text-align: left;
 }
