--- a/styles.css
+++ b/styles.css
@@ -58,3 +58,15 @@ header {
 footer p {
     margin: 0;
 }
+
+.loading {
+    display: none;
+    text-align: center;
+    margin: 1rem 0;
+    font-weight: bold;
+    font-size: 1.2rem;
+}
+
+.loading.show {
+    display: block;
+}
